1.5/_sources/modules/generated/sklearn.cross_decomposition.CCA.rst.txt
CCA
===

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: CCA
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.CCA sklearn.cross_decomposition.CCA.__init__ sklearn.cross_decomposition.CCA.fit sklearn.cross_decomposition.CCA.fit_transform sklearn.cross_decomposition.CCA.get_feature_names_out sklearn.cross_decomposition.CCA.get_metadata_routing sklearn.cross_decomposition.CCA.get_params sklearn.cross_decomposition.CCA.inverse_transform sklearn.cross_decomposition.CCA.predict sklearn.cross_decomposition.CCA.score sklearn.cross_decomposition.CCA.set_output sklearn.cross_decomposition.CCA.set_params sklearn.cross_decomposition.CCA.set_predict_request sklearn.cross_decomposition.CCA.set_score_request sklearn.cross_decomposition.CCA.set_transform_request sklearn.cross_decomposition.CCA.transform 
   :add-heading: Gallery examples
   :heading-level: -