1.7/_sources/modules/generated/sklearn.cross_decomposition.CCA.rst.txt
CCA
===

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: CCA
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.CCA sklearn.cross_decomposition.CCA.__delattr__ sklearn.cross_decomposition.CCA.__dir__ sklearn.cross_decomposition.CCA.__eq__ sklearn.cross_decomposition.CCA.__format__ sklearn.cross_decomposition.CCA.__ge__ sklearn.cross_decomposition.CCA.__getattribute__ sklearn.cross_decomposition.CCA.__getstate__ sklearn.cross_decomposition.CCA.__gt__ sklearn.cross_decomposition.CCA.__hash__ sklearn.cross_decomposition.CCA.__init__ sklearn.cross_decomposition.CCA.__init_subclass__ sklearn.cross_decomposition.CCA.__le__ sklearn.cross_decomposition.CCA.__lt__ sklearn.cross_decomposition.CCA.__ne__ sklearn.cross_decomposition.CCA.__new__ sklearn.cross_decomposition.CCA.__reduce__ sklearn.cross_decomposition.CCA.__reduce_ex__ sklearn.cross_decomposition.CCA.__repr__ sklearn.cross_decomposition.CCA.__setattr__ sklearn.cross_decomposition.CCA.__setstate__ sklearn.cross_decomposition.CCA.__sizeof__ sklearn.cross_decomposition.CCA.__sklearn_clone__ sklearn.cross_decomposition.CCA.__sklearn_tags__ sklearn.cross_decomposition.CCA.__str__ sklearn.cross_decomposition.CCA.__subclasshook__ sklearn.cross_decomposition.CCA._build_request_for_signature sklearn.cross_decomposition.CCA._get_default_requests sklearn.cross_decomposition.CCA._get_doc_link sklearn.cross_decomposition.CCA._get_metadata_request sklearn.cross_decomposition.CCA._get_param_names sklearn.cross_decomposition.CCA._get_params_html sklearn.cross_decomposition.CCA._html_repr sklearn.cross_decomposition.CCA._repr_html_inner sklearn.cross_decomposition.CCA._repr_mimebundle_ sklearn.cross_decomposition.CCA._validate_params sklearn.cross_decomposition.CCA.fit sklearn.cross_decomposition.CCA.fit_transform sklearn.cross_decomposition.CCA.get_feature_names_out sklearn.cross_decomposition.CCA.get_metadata_routing sklearn.cross_decomposition.CCA.get_params sklearn.cross_decomposition.CCA.inverse_transform sklearn.cross_decomposition.CCA.predict sklearn.cross_decomposition.CCA.score sklearn.cross_decomposition.CCA.set_output sklearn.cross_decomposition.CCA.set_params sklearn.cross_decomposition.CCA.set_predict_request sklearn.cross_decomposition.CCA.set_score_request sklearn.cross_decomposition.CCA.set_transform_request sklearn.cross_decomposition.CCA.transform 
   :add-heading: Gallery examples
   :heading-level: -